---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/conditional/test_conditional_of_name_exprs.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/conditional/test_conditional_of_name_exprs.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (compound-statement
            (definition x~3 `int` (42 `int`))
            (definition y~4 `int` (27 `int`))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (conditional `int`
                     (0 `int`)
                     (x~3 `int`)
                     (y~4 `int`))))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (conditional `int`
                     (1 `int`)
                     (x~3 `int`)
                     (y~4 `int`)))))
         (compound-statement
            (definition x~5 `short` (truncate `short` (42 `int`)))
            (definition y~6 `short` (truncate `short` (27 `int`)))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (conditional `int`
                     (0 `int`)
                     (sign-extend `int` (x~5 `short`))
                     (sign-extend `int` (y~6 `short`)))))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 4>>`
                           (string `array<char; 4>` "%d\n\0"))))
                  (conditional `int`
                     (1 `int`)
                     (sign-extend `int` (x~5 `short`))
                     (sign-extend `int` (y~6 `short`))))))
         (compound-statement
            (definition x~7 `long` (sign-extend `long` (42 `int`)))
            (definition y~8 `long` (sign-extend `long` (27 `int`)))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 5>>`
                           (string `array<char; 5>` "%ld\n\0"))))
                  (conditional `long`
                     (0 `int`)
                     (x~7 `long`)
                     (y~8 `long`))))
            (expression
               (call `int`
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 5>>`
                           (string `array<char; 5>` "%ld\n\0"))))
                  (conditional `long`
                     (1 `int`)
                     (x~7 `long`)
                     (y~8 `long`))))))))

----- stderr -----
